2013-05-20  Junichi Satoh  <junichi@rworks.jp>

	* include/functions.php: Added default binary path for snmpwalk
	in *BSD. The path can also be defined specific one by using
	config['snmpwalk'].

2013-05-16 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/massive/massive_delete_agents.php,
	godmode/massive/massive_edit_modules.php,
	godmode/massive/massive_delete_modules.php,
	godmode/modules/manage_network_components.php,
	godmode/modules/manage_nc_groups.php,
	godmode/modules/manage_network_templates.php,
	godmode/reporting/reporting_builder.php,
	godmode/agentes/configurar_agente.php,
	godmode/agentes/module_manager.php, include/functions_agents.php,
	include/functions_tags.php, include/functions_incidents.php,
	include/functions_db.php, include/functions_messages.php,
	operation/messages/message_list.php: erased deprecated SQL
	transaction. 

2013-05-14  Sergio Martin <sergio.martin@artica.es>

	* include/styles/pandora.css
	general/logon_ok.php: fix a layout error
	in mail pandora screen

2013-05-14  Ramon Novoa  <rnovoa@artica.es>

	* godmode/agentes/module_manager_editor.php: By default start SNMP
	  walks at the root.

	* include/functions.php: Ignore multi-line values when searching for
	  OIDs.

	* include/languages/ast.po,
	  include/languages/nl.mo,
	  include/languages/pt_BR.po,
	  include/languages/pl.mo,
	  include/languages/ko.po,
	  include/languages/pt.mo,
	  include/languages/en_AU.mo,
	  include/languages/bg.mo,
	  include/languages/bn.po,
	  include/languages/ar.po,
	  include/languages/cs.mo,
	  include/languages/es.mo,
	  include/languages/sk.mo,
	  include/languages/uk.mo,
	  include/languages/ro.mo,
	  include/languages/mr.po,
	  include/languages/da.po,
	  include/languages/ja.po,
	  include/languages/nb.mo,
	  include/languages/fi.po,
	  include/languages/en.mo,
	  include/languages/hi.po,
	  include/languages/fr.mo,
	  include/languages/eu.po,
	  include/languages/en_GB.po,
	  include/languages/ca.mo,
	  include/languages/tr.mo,